// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DelegateRegistrationForm > should error if username is too long 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        data-testid="DelegateRegistrationForm__form-step"
      >
        <div
          class="flex items-end justify-between bg-theme-background"
        >
          <div
            class="space-y-2"
          >
            <div
              class="flex items-center gap-3"
            >
              <h1
                class="mb-0 text-2xl leading-[29px]"
                data-testid="header__title"
              >
                Register Delegate
              </h1>
            </div>
            <div
              class="flex items-center leading-5 text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Register a new Delegate address on the network below.
            </div>
          </div>
        </div>
        <div
          class="flex flex-col overflow-hidden rounded-xl mt-6"
        >
          <div
            class="css-rzhg83"
          >
            <div
              class="css-v0ob3f"
              height="16"
              width="16"
            >
              <svg
                id="circle-exclamation-mark"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                >
                  <circle
                    cx="10"
                    cy="10"
                    r="9"
                    stroke-miterlimit="10"
                  />
                  <path
                    d="M10 10.5v-5"
                    stroke-linecap="round"
                    stroke-miterlimit="10"
                  />
                  <path
                    d="M10 14h0"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </g>
              </svg>
            </div>
            <span>
              Warning
            </span>
          </div>
          <div
            class="css-trjt6n"
          >
            The Delegate name is permanent and cannot be modified later. It is registered on the network.
          </div>
        </div>
        <div
          class="no-ligatures css-1iw2tte"
          data-testid="TransactionNetwork"
        >
          <div
            class="w-40 flex-1 space-y-2 whitespace-nowrap"
            data-testid="TransactionDetail--desktop"
          >
            <div
              class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              Cryptoasset
            </div>
            <div
              class="flex items-center font-semibold"
            >
              ARK Devnet
            </div>
          </div>
          <div
            aria-label="ARK Devnet"
            class="text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background duration-100 css-1nqcsx"
            data-testid="NetworkIcon-ARK-ark.devnet"
          >
            <div
              class="css-1i4b0eq"
              data-testid="NetworkIcon__icon"
              height="20"
              width="20"
            >
              <svg
                id="ark"
                viewBox="0 0 36.3 30.6"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="no-ligatures css-1uo4ck9"
          data-testid="TransactionSender"
        >
          <div
            class="w-40 flex-1 space-y-2 whitespace-nowrap"
            data-testid="TransactionDetail--desktop"
          >
            <div
              class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              Sender
            </div>
            <div
              class="flex items-center font-semibold"
            >
              <div
                class="w-0 flex-1 overflow-auto text-right md:text-left"
              >
                <div
                  class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                >
                  <span
                    class="font-semibold text-base text-theme-text"
                    data-testid="Address__alias"
                  >
                    <span
                      class="no-ligatures css-9nx3be"
                      data-testid="TruncateEnd"
                    >
                      ARK Wallet 1
                    </span>
                  </span>
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                    data-testid="Address__address"
                  >
                    D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex items-center -space-x-1"
          >
            <div
              class="shrink-0 css-1n9jllj"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="space-y-6 pt-6"
        >
          <fieldset
            class="flex min-w-0 flex-col css-5kz4tk"
          >
            <label
              class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
              data-testid="FormLabel"
              for="username"
            >
              Delegate Name
            </label>
            <div
              class=" css-12mz4i6"
            >
              <div
                class="relative flex h-full flex-1"
              >
                <input
                  aria-invalid="true"
                  autocomplete="off"
                  class="no-ligatures w-full border-none css-1vs1awz"
                  data-testid="Input__username"
                  name="username"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                data-testid="Input__addon-end"
              >
                <span
                  data-errortext="Delegate Name should have at most 20 characters"
                  data-testid="Input__error"
                >
                  <div
                    class="text-theme-danger-500 css-1i4b0eq"
                    height="20"
                    width="20"
                  >
                    <svg
                      id="circle-exclamation-mark"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-width="2"
                      >
                        <circle
                          cx="10"
                          cy="10"
                          r="9"
                          stroke-miterlimit="10"
                        />
                        <path
                          d="M10 10.5v-5"
                          stroke-linecap="round"
                          stroke-miterlimit="10"
                        />
                        <path
                          d="M10 14h0"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </g>
                    </svg>
                  </div>
                </span>
              </div>
            </div>
          </fieldset>
          <fieldset
            class="flex min-w-0 flex-col css-1bcidjh"
          >
            <label
              class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
              data-testid="FormLabel"
              for="fee"
            >
              Transaction Fee
            </label>
            <div
              class="relative"
              data-testid="InputFee"
            >
              <div
                class="absolute right-0 -mt-7"
              >
                <div
                  class="flex items-center"
                >
                  <span
                    class="css-1588dqn"
                    role="button"
                  >
                    Simple
                  </span>
                  <label
                    class="css-1uxo3sa"
                  >
                    <input
                      class="css-1r71f0z toggle-input"
                      type="checkbox"
                    />
                    <div
                      class="css-10kxbe9 toggle-handle"
                    >
                      <span
                        class="css-14ojvms"
                      />
                    </div>
                  </label>
                  <span
                    class="css-noruk0"
                    role="button"
                  >
                    Advanced
                  </span>
                </div>
              </div>
              <div
                class="inline-flex w-full items-center space-x-3"
                data-testid="ButtonGroup"
                role="radiogroup"
              >
                <button
                  aria-checked="false"
                  aria-label="0"
                  class="css-1sbhrf0"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <div>
                      Slow
                    </div>
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      0 DARK
                    </span>
                  </div>
                </button>
                <button
                  aria-checked="true"
                  aria-label="1.354"
                  class="css-1sbhrf0"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <div>
                      Average
                    </div>
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      1.354 DARK
                    </span>
                  </div>
                </button>
                <button
                  aria-checked="false"
                  aria-label="10"
                  class="css-1sbhrf0"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <div>
                      Fast
                    </div>
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      10 DARK
                    </span>
                  </div>
                </button>
              </div>
            </div>
          </fieldset>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelegateRegistrationForm > should render form step 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        data-testid="DelegateRegistrationForm__form-step"
      >
        <div
          class="flex items-end justify-between bg-theme-background"
        >
          <div
            class="space-y-2"
          >
            <div
              class="flex items-center gap-3"
            >
              <h1
                class="mb-0 text-2xl leading-[29px]"
                data-testid="header__title"
              >
                Register Delegate
              </h1>
            </div>
            <div
              class="flex items-center leading-5 text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Register a new Delegate address on the network below.
            </div>
          </div>
        </div>
        <div
          class="flex flex-col overflow-hidden rounded-xl mt-6"
        >
          <div
            class="css-rzhg83"
          >
            <div
              class="css-v0ob3f"
              height="16"
              width="16"
            >
              <svg
                id="circle-exclamation-mark"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                >
                  <circle
                    cx="10"
                    cy="10"
                    r="9"
                    stroke-miterlimit="10"
                  />
                  <path
                    d="M10 10.5v-5"
                    stroke-linecap="round"
                    stroke-miterlimit="10"
                  />
                  <path
                    d="M10 14h0"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </g>
              </svg>
            </div>
            <span>
              Warning
            </span>
          </div>
          <div
            class="css-trjt6n"
          >
            The Delegate name is permanent and cannot be modified later. It is registered on the network.
          </div>
        </div>
        <div
          class="no-ligatures css-1iw2tte"
          data-testid="TransactionNetwork"
        >
          <div
            class="w-40 flex-1 space-y-2 whitespace-nowrap"
            data-testid="TransactionDetail--desktop"
          >
            <div
              class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              Cryptoasset
            </div>
            <div
              class="flex items-center font-semibold"
            >
              ARK Devnet
            </div>
          </div>
          <div
            aria-label="ARK Devnet"
            class="text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background duration-100 css-1nqcsx"
            data-testid="NetworkIcon-ARK-ark.devnet"
          >
            <div
              class="css-1i4b0eq"
              data-testid="NetworkIcon__icon"
              height="20"
              width="20"
            >
              <svg
                id="ark"
                viewBox="0 0 36.3 30.6"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="no-ligatures css-1uo4ck9"
          data-testid="TransactionSender"
        >
          <div
            class="w-40 flex-1 space-y-2 whitespace-nowrap"
            data-testid="TransactionDetail--desktop"
          >
            <div
              class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              Sender
            </div>
            <div
              class="flex items-center font-semibold"
            >
              <div
                class="w-0 flex-1 overflow-auto text-right md:text-left"
              >
                <div
                  class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                >
                  <span
                    class="font-semibold text-base text-theme-text"
                    data-testid="Address__alias"
                  >
                    <span
                      class="no-ligatures css-9nx3be"
                      data-testid="TruncateEnd"
                    >
                      ARK Wallet 1
                    </span>
                  </span>
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                    data-testid="Address__address"
                  >
                    D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex items-center -space-x-1"
          >
            <div
              class="shrink-0 css-1n9jllj"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="space-y-6 pt-6"
        >
          <fieldset
            class="flex min-w-0 flex-col css-1bcidjh"
          >
            <label
              class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
              data-testid="FormLabel"
              for="username"
            >
              Delegate Name
            </label>
            <div
              class=" css-n1b0kl"
            >
              <div
                class="relative flex h-full flex-1"
              >
                <input
                  autocomplete="off"
                  class="no-ligatures w-full border-none css-1vs1awz"
                  data-testid="Input__username"
                  name="username"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </fieldset>
          <fieldset
            class="flex min-w-0 flex-col css-1bcidjh"
          >
            <label
              class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
              data-testid="FormLabel"
              for="fee"
            >
              Transaction Fee
            </label>
            <div
              class="relative"
              data-testid="InputFee"
            >
              <div
                class="absolute right-0 -mt-7"
              >
                <div
                  class="flex items-center"
                >
                  <span
                    class="css-1588dqn"
                    role="button"
                  >
                    Simple
                  </span>
                  <label
                    class="css-1uxo3sa"
                  >
                    <input
                      class="css-1r71f0z toggle-input"
                      type="checkbox"
                    />
                    <div
                      class="css-10kxbe9 toggle-handle"
                    >
                      <span
                        class="css-14ojvms"
                      />
                    </div>
                  </label>
                  <span
                    class="css-noruk0"
                    role="button"
                  >
                    Advanced
                  </span>
                </div>
              </div>
              <div
                class="inline-flex w-full items-center space-x-3"
                data-testid="ButtonGroup"
                role="radiogroup"
              >
                <button
                  aria-checked="false"
                  aria-label="0"
                  class="css-1sbhrf0"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <div>
                      Slow
                    </div>
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      0 DARK
                    </span>
                  </div>
                </button>
                <button
                  aria-checked="true"
                  aria-label="1.354"
                  class="css-1sbhrf0"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <div>
                      Average
                    </div>
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      1.354 DARK
                    </span>
                  </div>
                </button>
                <button
                  aria-checked="false"
                  aria-label="10"
                  class="css-1sbhrf0"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <div>
                      Fast
                    </div>
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      10 DARK
                    </span>
                  </div>
                </button>
              </div>
            </div>
          </fieldset>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelegateRegistrationForm > should render review step 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        class="space-y-3 sm:space-y-4"
        data-testid="DelegateRegistrationForm__review-step"
      >
        <div
          class="flex items-end justify-between bg-theme-background"
        >
          <div
            class="space-y-2"
          >
            <div
              class="flex items-center gap-3"
            >
              <h1
                class="mb-0 text-2xl leading-[29px]"
                data-testid="header__title"
              >
                Transaction Review
              </h1>
            </div>
            <div
              class="flex items-center leading-5 text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Review the transaction details below.
            </div>
          </div>
        </div>
        <div
          data-testid="DetailWrapper"
        >
          <div
            class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-black sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
            data-testid="DetailLabel"
          >
            <div
              class="no-ligatures text-md min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
              data-testid="DetailLabelText"
            >
              Addressing
            </div>
          </div>
          <div
            class="w-full break-words rounded-lg border-theme-secondary-300 p-3 dark:border-theme-secondary-800 sm:border sm:px-6 sm:py-5 [.condensed_&]:sm:py-4 mt-0 sm:mt-2"
          >
            <div
              class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
            >
              <div
                class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5 w-auto sm:min-w-28"
              >
                From
              </div>
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-end sm:justify-start"
              >
                <span
                  class="font-semibold text-base text-theme-text text-sm leading-[17px] sm:leading-5 sm:text-base"
                  data-testid="Address__alias"
                >
                  <span
                    class="no-ligatures css-9nx3be"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <div
                  class="relative grow leading-[17px] sm:leading-5 text-left"
                >
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 text-sm leading-[17px] sm:leading-5 sm:text-base w-full w-3/4 font-semibold text-base absolute w-full"
                    data-testid="Address__address"
                  >
                    D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                  </span>
                  <span>
                     
                  </span>
                </div>
                <button
                  class="ring-focus relative focus:outline-none"
                  data-ring-focus-margin="-m-1"
                  data-testid="clipboard-icon__wrapper"
                  type="button"
                >
                  <div
                    class="text-theme-primary-400 dark:text-theme-secondary-700 dark:hover:text-theme-secondary-500 css-v0ob3f"
                    height="16"
                    width="16"
                  >
                    <svg
                      id="copy"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                        />
                        <path
                          d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                        />
                      </g>
                    </svg>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="DetailWrapper"
        >
          <div
            class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-black sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
            data-testid="DetailLabel"
          >
            <div
              class="no-ligatures text-md min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
              data-testid="DetailLabelText"
            >
              Transaction Type
            </div>
          </div>
          <div
            class="w-full break-words rounded-lg border-theme-secondary-300 p-3 dark:border-theme-secondary-800 sm:border sm:px-6 sm:py-5 [.condensed_&]:sm:py-4 mt-0 sm:mt-2"
          >
            <div
              class="space-y-3 sm:space-y-0"
            >
              <div
                class="flex w-full items-center justify-between gap-4 sm:justify-start"
              >
                <div
                  class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5 w-auto sm:min-w-28"
                >
                  Category
                </div>
                <div
                  class="flex items-center rounded bg-theme-secondary-200 px-1 py-[3px] dark:border dark:border-theme-secondary-800 dark:bg-transparent"
                >
                  <span
                    class="text-[12px] font-semibold leading-[15px] text-theme-secondary-700 dark:text-theme-secondary-500"
                  >
                    Registration
                  </span>
                </div>
              </div>
              <div
                class="hidden sm:block"
              >
                <div
                  class="border-theme-secondary-300 dark:border-theme-secondary-800 css-ppmbkz"
                  type="horizontal"
                />
              </div>
              <div
                class="flex w-full items-center justify-between gap-4 sm:justify-start"
              >
                <div
                  class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5 w-auto sm:min-w-28"
                >
                  Delegate Name
                </div>
                <div
                  class="no-ligatures truncate text-sm font-semibold leading-[17px] text-theme-secondary-900 dark:text-theme-secondary-200 sm:text-base sm:leading-5"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="DetailWrapper"
        >
          <div
            class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-black sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
            data-testid="DetailLabel"
          >
            <div
              class="no-ligatures text-md min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
              data-testid="DetailLabelText"
            >
              Transaction Summary
            </div>
          </div>
          <div
            class="mt-0 p-3 sm:mt-2 sm:p-0"
          >
            <div
              class="rounded-lg border border-theme-secondary-300 dark:border-theme-secondary-800"
            >
              <div
                class="relative px-6 py-4 sm:py-5"
              >
                <div
                  class="flex flex-col divide-y divide-theme-secondary-300 dark:divide-theme-secondary-800 sm:flex-row sm:divide-x sm:divide-y-0"
                >
                  <div
                    class="mb-4 flex flex-col justify-center px-4 text-center sm:mb-0 sm:w-1/2 sm:p-0 sm:text-left"
                  >
                    <span
                      class="css-1rmjubp"
                    >
                      Transaction(s) Amount
                    </span>
                    <span
                      class="whitespace-nowrap text-md mt-1 font-semibold"
                      data-testid="Amount"
                    >
                      0 DARK
                    </span>
                  </div>
                  <div
                    class="flex flex-col justify-center p-2 px-4 pt-6 text-center sm:w-1/2 sm:p-0 sm:text-right"
                  >
                    <span
                      class="css-1rmjubp"
                    >
                      Transaction Fee
                    </span>
                    <span
                      class="whitespace-nowrap text-md mt-1 font-semibold"
                      data-testid="Amount"
                    >
                      2 DARK
                    </span>
                  </div>
                </div>
                <div
                  class="absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 transform"
                >
                  <div
                    class="ml-px bg-theme-background p-2 text-theme-secondary-900 dark:text-theme-secondary-600"
                  >
                    <div
                      class="css-v0ob3f"
                      height="16"
                      width="16"
                    >
                      <svg
                        id="plus"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        >
                          <path
                            d="M1 10h18M10 1v18"
                          />
                        </g>
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="justfiy-center flex flex-col items-center rounded-b-lg border-t border-theme-secondary-300 bg-theme-secondary-100 py-4 dark:border-theme-secondary-800 dark:bg-theme-secondary-800 sm:py-5"
              >
                <span
                  class="css-1rmjubp"
                >
                  Total Amount
                </span>
                <span
                  class="whitespace-nowrap text-md font-bold sm:text-lg"
                  data-testid="Amount"
                >
                  2 DARK
                </span>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelegateRegistrationForm > should set fee 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        data-testid="DelegateRegistrationForm__form-step"
      >
        <div
          class="flex items-end justify-between bg-theme-background"
        >
          <div
            class="space-y-2"
          >
            <div
              class="flex items-center gap-3"
            >
              <h1
                class="mb-0 text-2xl leading-[29px]"
                data-testid="header__title"
              >
                Register Delegate
              </h1>
            </div>
            <div
              class="flex items-center leading-5 text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Register a new Delegate address on the network below.
            </div>
          </div>
        </div>
        <div
          class="flex flex-col overflow-hidden rounded-xl mt-6"
        >
          <div
            class="css-rzhg83"
          >
            <div
              class="css-v0ob3f"
              height="16"
              width="16"
            >
              <svg
                id="circle-exclamation-mark"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                >
                  <circle
                    cx="10"
                    cy="10"
                    r="9"
                    stroke-miterlimit="10"
                  />
                  <path
                    d="M10 10.5v-5"
                    stroke-linecap="round"
                    stroke-miterlimit="10"
                  />
                  <path
                    d="M10 14h0"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </g>
              </svg>
            </div>
            <span>
              Warning
            </span>
          </div>
          <div
            class="css-trjt6n"
          >
            The Delegate name is permanent and cannot be modified later. It is registered on the network.
          </div>
        </div>
        <div
          class="no-ligatures css-1iw2tte"
          data-testid="TransactionNetwork"
        >
          <div
            class="w-40 flex-1 space-y-2 whitespace-nowrap"
            data-testid="TransactionDetail--desktop"
          >
            <div
              class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              Cryptoasset
            </div>
            <div
              class="flex items-center font-semibold"
            >
              ARK Devnet
            </div>
          </div>
          <div
            aria-label="ARK Devnet"
            class="text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background duration-100 css-1nqcsx"
            data-testid="NetworkIcon-ARK-ark.devnet"
          >
            <div
              class="css-1i4b0eq"
              data-testid="NetworkIcon__icon"
              height="20"
              width="20"
            >
              <svg
                id="ark"
                viewBox="0 0 36.3 30.6"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="no-ligatures css-1uo4ck9"
          data-testid="TransactionSender"
        >
          <div
            class="w-40 flex-1 space-y-2 whitespace-nowrap"
            data-testid="TransactionDetail--desktop"
          >
            <div
              class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              Sender
            </div>
            <div
              class="flex items-center font-semibold"
            >
              <div
                class="w-0 flex-1 overflow-auto text-right md:text-left"
              >
                <div
                  class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                >
                  <span
                    class="font-semibold text-base text-theme-text"
                    data-testid="Address__alias"
                  >
                    <span
                      class="no-ligatures css-9nx3be"
                      data-testid="TruncateEnd"
                    >
                      ARK Wallet 1
                    </span>
                  </span>
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                    data-testid="Address__address"
                  >
                    D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex items-center -space-x-1"
          >
            <div
              class="shrink-0 css-1n9jllj"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="space-y-6 pt-6"
        >
          <fieldset
            class="flex min-w-0 flex-col css-1bcidjh"
          >
            <label
              class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
              data-testid="FormLabel"
              for="username"
            >
              Delegate Name
            </label>
            <div
              class=" css-n1b0kl"
            >
              <div
                class="relative flex h-full flex-1"
              >
                <input
                  autocomplete="off"
                  class="no-ligatures w-full border-none css-1vs1awz"
                  data-testid="Input__username"
                  name="username"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </fieldset>
          <fieldset
            class="flex min-w-0 flex-col css-1bcidjh"
          >
            <label
              class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
              data-testid="FormLabel"
              for="fee"
            >
              Transaction Fee
            </label>
            <div
              class="relative"
              data-testid="InputFee"
            >
              <div
                class="absolute right-0 -mt-7"
              >
                <div
                  class="flex items-center"
                >
                  <span
                    class="css-noruk0"
                    role="button"
                  >
                    Simple
                  </span>
                  <label
                    class="css-1uxo3sa"
                  >
                    <input
                      class="css-1r71f0z toggle-input"
                      type="checkbox"
                    />
                    <div
                      class="css-10kxbe9 toggle-handle"
                    >
                      <span
                        class="css-14ojvms"
                      />
                    </div>
                  </label>
                  <span
                    class="css-1588dqn"
                    role="button"
                  >
                    Advanced
                  </span>
                </div>
              </div>
              <div
                class="relative"
              >
                <div
                  class="css-n1b0kl"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      autocomplete="off"
                      class="no-ligatures w-full border-none css-1vs1awz"
                      data-testid="InputCurrency"
                      name="fee"
                      type="text"
                      value="11"
                    />
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600 divide-none"
                    data-testid="Input__addon-end"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="-mr-4 flex h-14 w-22 flex-row justify-between border-l text-theme-secondary-700 dark:border-theme-secondary-700 sm:w-10 sm:flex-col border-theme-secondary-400"
                        >
                          <button
                            class="border-r sm:border-r-0 css-jmpn15"
                            data-testid="InputFeeAdvanced__up"
                            type="button"
                          >
                            <div
                              class="css-15txs7d"
                              height="10"
                              width="10"
                            >
                              <svg
                                id="chevron-up-small"
                                viewBox="0 0 10 10"
                                x="0"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                y="0"
                              >
                                <path
                                  d="M1 6.975l3.8-3.8c.1-.1.3-.1.4 0l3.8 3.8"
                                  fill="none"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="2"
                                />
                              </svg>
                            </div>
                          </button>
                          <button
                            class="css-1ddtsjs"
                            data-testid="InputFeeAdvanced__down"
                            type="button"
                          >
                            <div
                              class="css-15txs7d"
                              height="10"
                              width="10"
                            >
                              <svg
                                id="chevron-down-small"
                                viewBox="0 0 10 10"
                                x="0"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                y="0"
                              >
                                <path
                                  d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                                  fill="none"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="2"
                                />
                              </svg>
                            </div>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelegateRegistrationForm > should show error if username already exists 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        data-testid="DelegateRegistrationForm__form-step"
      >
        <div
          class="flex items-end justify-between bg-theme-background"
        >
          <div
            class="space-y-2"
          >
            <div
              class="flex items-center gap-3"
            >
              <h1
                class="mb-0 text-2xl leading-[29px]"
                data-testid="header__title"
              >
                Register Delegate
              </h1>
            </div>
            <div
              class="flex items-center leading-5 text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Register a new Delegate address on the network below.
            </div>
          </div>
        </div>
        <div
          class="flex flex-col overflow-hidden rounded-xl mt-6"
        >
          <div
            class="css-rzhg83"
          >
            <div
              class="css-v0ob3f"
              height="16"
              width="16"
            >
              <svg
                id="circle-exclamation-mark"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                >
                  <circle
                    cx="10"
                    cy="10"
                    r="9"
                    stroke-miterlimit="10"
                  />
                  <path
                    d="M10 10.5v-5"
                    stroke-linecap="round"
                    stroke-miterlimit="10"
                  />
                  <path
                    d="M10 14h0"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </g>
              </svg>
            </div>
            <span>
              Warning
            </span>
          </div>
          <div
            class="css-trjt6n"
          >
            The Delegate name is permanent and cannot be modified later. It is registered on the network.
          </div>
        </div>
        <div
          class="no-ligatures css-1iw2tte"
          data-testid="TransactionNetwork"
        >
          <div
            class="w-40 flex-1 space-y-2 whitespace-nowrap"
            data-testid="TransactionDetail--desktop"
          >
            <div
              class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              Cryptoasset
            </div>
            <div
              class="flex items-center font-semibold"
            >
              ARK Devnet
            </div>
          </div>
          <div
            aria-label="ARK Devnet"
            class="text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background duration-100 css-1nqcsx"
            data-testid="NetworkIcon-ARK-ark.devnet"
          >
            <div
              class="css-1i4b0eq"
              data-testid="NetworkIcon__icon"
              height="20"
              width="20"
            >
              <svg
                id="ark"
                viewBox="0 0 36.3 30.6"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="no-ligatures css-1uo4ck9"
          data-testid="TransactionSender"
        >
          <div
            class="w-40 flex-1 space-y-2 whitespace-nowrap"
            data-testid="TransactionDetail--desktop"
          >
            <div
              class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              Sender
            </div>
            <div
              class="flex items-center font-semibold"
            >
              <div
                class="w-0 flex-1 overflow-auto text-right md:text-left"
              >
                <div
                  class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                >
                  <span
                    class="font-semibold text-base text-theme-text"
                    data-testid="Address__alias"
                  >
                    <span
                      class="no-ligatures css-9nx3be"
                      data-testid="TruncateEnd"
                    >
                      ARK Wallet 1
                    </span>
                  </span>
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                    data-testid="Address__address"
                  >
                    D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex items-center -space-x-1"
          >
            <div
              class="shrink-0 css-1n9jllj"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="space-y-6 pt-6"
        >
          <fieldset
            class="flex min-w-0 flex-col css-5kz4tk"
          >
            <label
              class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
              data-testid="FormLabel"
              for="username"
            >
              Delegate Name
            </label>
            <div
              class=" css-12mz4i6"
            >
              <div
                class="relative flex h-full flex-1"
              >
                <input
                  aria-invalid="true"
                  autocomplete="off"
                  class="no-ligatures w-full border-none css-1vs1awz"
                  data-testid="Input__username"
                  name="username"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                data-testid="Input__addon-end"
              >
                <span
                  data-errortext="Delegate Name already exists"
                  data-testid="Input__error"
                >
                  <div
                    class="text-theme-danger-500 css-1i4b0eq"
                    height="20"
                    width="20"
                  >
                    <svg
                      id="circle-exclamation-mark"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-width="2"
                      >
                        <circle
                          cx="10"
                          cy="10"
                          r="9"
                          stroke-miterlimit="10"
                        />
                        <path
                          d="M10 10.5v-5"
                          stroke-linecap="round"
                          stroke-miterlimit="10"
                        />
                        <path
                          d="M10 14h0"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </g>
                    </svg>
                  </div>
                </span>
              </div>
            </div>
          </fieldset>
          <fieldset
            class="flex min-w-0 flex-col css-1bcidjh"
          >
            <label
              class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
              data-testid="FormLabel"
              for="fee"
            >
              Transaction Fee
            </label>
            <div
              class="relative"
              data-testid="InputFee"
            >
              <div
                class="absolute right-0 -mt-7"
              >
                <div
                  class="flex items-center"
                >
                  <span
                    class="css-1588dqn"
                    role="button"
                  >
                    Simple
                  </span>
                  <label
                    class="css-1uxo3sa"
                  >
                    <input
                      class="css-1r71f0z toggle-input"
                      type="checkbox"
                    />
                    <div
                      class="css-10kxbe9 toggle-handle"
                    >
                      <span
                        class="css-14ojvms"
                      />
                    </div>
                  </label>
                  <span
                    class="css-noruk0"
                    role="button"
                  >
                    Advanced
                  </span>
                </div>
              </div>
              <div
                class="inline-flex w-full items-center space-x-3"
                data-testid="ButtonGroup"
                role="radiogroup"
              >
                <button
                  aria-checked="false"
                  aria-label="0"
                  class="css-1sbhrf0"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <div>
                      Slow
                    </div>
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      0 DARK
                    </span>
                  </div>
                </button>
                <button
                  aria-checked="true"
                  aria-label="1.354"
                  class="css-1sbhrf0"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <div>
                      Average
                    </div>
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      1.354 DARK
                    </span>
                  </div>
                </button>
                <button
                  aria-checked="false"
                  aria-label="10"
                  class="css-1sbhrf0"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <div>
                      Fast
                    </div>
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      10 DARK
                    </span>
                  </div>
                </button>
              </div>
            </div>
          </fieldset>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelegateRegistrationForm > should show error if username contains illegal characters 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        data-testid="DelegateRegistrationForm__form-step"
      >
        <div
          class="flex items-end justify-between bg-theme-background"
        >
          <div
            class="space-y-2"
          >
            <div
              class="flex items-center gap-3"
            >
              <h1
                class="mb-0 text-2xl leading-[29px]"
                data-testid="header__title"
              >
                Register Delegate
              </h1>
            </div>
            <div
              class="flex items-center leading-5 text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Register a new Delegate address on the network below.
            </div>
          </div>
        </div>
        <div
          class="flex flex-col overflow-hidden rounded-xl mt-6"
        >
          <div
            class="css-rzhg83"
          >
            <div
              class="css-v0ob3f"
              height="16"
              width="16"
            >
              <svg
                id="circle-exclamation-mark"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                >
                  <circle
                    cx="10"
                    cy="10"
                    r="9"
                    stroke-miterlimit="10"
                  />
                  <path
                    d="M10 10.5v-5"
                    stroke-linecap="round"
                    stroke-miterlimit="10"
                  />
                  <path
                    d="M10 14h0"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </g>
              </svg>
            </div>
            <span>
              Warning
            </span>
          </div>
          <div
            class="css-trjt6n"
          >
            The Delegate name is permanent and cannot be modified later. It is registered on the network.
          </div>
        </div>
        <div
          class="no-ligatures css-1iw2tte"
          data-testid="TransactionNetwork"
        >
          <div
            class="w-40 flex-1 space-y-2 whitespace-nowrap"
            data-testid="TransactionDetail--desktop"
          >
            <div
              class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              Cryptoasset
            </div>
            <div
              class="flex items-center font-semibold"
            >
              ARK Devnet
            </div>
          </div>
          <div
            aria-label="ARK Devnet"
            class="text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background duration-100 css-1nqcsx"
            data-testid="NetworkIcon-ARK-ark.devnet"
          >
            <div
              class="css-1i4b0eq"
              data-testid="NetworkIcon__icon"
              height="20"
              width="20"
            >
              <svg
                id="ark"
                viewBox="0 0 36.3 30.6"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="no-ligatures css-1uo4ck9"
          data-testid="TransactionSender"
        >
          <div
            class="w-40 flex-1 space-y-2 whitespace-nowrap"
            data-testid="TransactionDetail--desktop"
          >
            <div
              class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              Sender
            </div>
            <div
              class="flex items-center font-semibold"
            >
              <div
                class="w-0 flex-1 overflow-auto text-right md:text-left"
              >
                <div
                  class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                >
                  <span
                    class="font-semibold text-base text-theme-text"
                    data-testid="Address__alias"
                  >
                    <span
                      class="no-ligatures css-9nx3be"
                      data-testid="TruncateEnd"
                    >
                      ARK Wallet 1
                    </span>
                  </span>
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                    data-testid="Address__address"
                  >
                    D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex items-center -space-x-1"
          >
            <div
              class="shrink-0 css-1n9jllj"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="space-y-6 pt-6"
        >
          <fieldset
            class="flex min-w-0 flex-col css-5kz4tk"
          >
            <label
              class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
              data-testid="FormLabel"
              for="username"
            >
              Delegate Name
            </label>
            <div
              class=" css-12mz4i6"
            >
              <div
                class="relative flex h-full flex-1"
              >
                <input
                  aria-invalid="true"
                  autocomplete="off"
                  class="no-ligatures w-full border-none css-1vs1awz"
                  data-testid="Input__username"
                  name="username"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                data-testid="Input__addon-end"
              >
                <span
                  data-errortext="The following characters are not allowed: '<', '>'"
                  data-testid="Input__error"
                >
                  <div
                    class="text-theme-danger-500 css-1i4b0eq"
                    height="20"
                    width="20"
                  >
                    <svg
                      id="circle-exclamation-mark"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-width="2"
                      >
                        <circle
                          cx="10"
                          cy="10"
                          r="9"
                          stroke-miterlimit="10"
                        />
                        <path
                          d="M10 10.5v-5"
                          stroke-linecap="round"
                          stroke-miterlimit="10"
                        />
                        <path
                          d="M10 14h0"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </g>
                    </svg>
                  </div>
                </span>
              </div>
            </div>
          </fieldset>
          <fieldset
            class="flex min-w-0 flex-col css-1bcidjh"
          >
            <label
              class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
              data-testid="FormLabel"
              for="fee"
            >
              Transaction Fee
            </label>
            <div
              class="relative"
              data-testid="InputFee"
            >
              <div
                class="absolute right-0 -mt-7"
              >
                <div
                  class="flex items-center"
                >
                  <span
                    class="css-1588dqn"
                    role="button"
                  >
                    Simple
                  </span>
                  <label
                    class="css-1uxo3sa"
                  >
                    <input
                      class="css-1r71f0z toggle-input"
                      type="checkbox"
                    />
                    <div
                      class="css-10kxbe9 toggle-handle"
                    >
                      <span
                        class="css-14ojvms"
                      />
                    </div>
                  </label>
                  <span
                    class="css-noruk0"
                    role="button"
                  >
                    Advanced
                  </span>
                </div>
              </div>
              <div
                class="inline-flex w-full items-center space-x-3"
                data-testid="ButtonGroup"
                role="radiogroup"
              >
                <button
                  aria-checked="false"
                  aria-label="0"
                  class="css-1sbhrf0"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <div>
                      Slow
                    </div>
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      0 DARK
                    </span>
                  </div>
                </button>
                <button
                  aria-checked="true"
                  aria-label="1.354"
                  class="css-1sbhrf0"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <div>
                      Average
                    </div>
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      1.354 DARK
                    </span>
                  </div>
                </button>
                <button
                  aria-checked="false"
                  aria-label="10"
                  class="css-1sbhrf0"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <div>
                      Fast
                    </div>
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      10 DARK
                    </span>
                  </div>
                </button>
              </div>
            </div>
          </fieldset>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;
